# Booootaru

./: .breakpoints  README.md  bankdata.json  coindata.json  dailycheck.json  lineup.json  main.py  music.json  pyproject.toml
cmds/: maindoc.py
